--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-express-mongoose",
-  "description": "A boilerplate application for express mongoose",
+  "name": "Genom T",
+  "description": "A nodejs boilerplate application for express mongoose with google auth and twitter bootstrap",
   "version": "0.0.1",
   "author": {
-    "name": "Madhusudhan Srinivasa",
-    "email": "me@madhums.me"
+    "name": "Krzysztof Rozestwinski",
+    "email": "k.rozestwinski@gmail.com"
   },
   "engines": {
     "node": "0.10.x",
